--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 	 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.kosmo</groupId>
-	<artifactId>onememo</artifactId>
+	<artifactId>movieing</artifactId>
 	<name>SpringMaven</name>
 	<packaging>war</packaging>
 	<version>1.0.0-BUILD-SNAPSHOT</version>
